crates/crochet_parser/src/snapshots/crochet_parser__tests__operations-10.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let cond = a != b;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..18,
                pattern: Ident(
                    BindingIdent {
                        span: 4..8,
                        id: Ident {
                            span: 4..8,
                            name: "cond",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Op(
                        Op {
                            span: 11..17,
                            op: NotEq,
                            left: Ident(
                                Ident {
                                    span: 11..12,
                                    name: "a",
                                },
                            ),
                            right: Ident(
                                Ident {
                                    span: 16..17,
                                    name: "b",
                                },
                            ),
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
