crates/crochet_parser/src/snapshots/crochet_parser__tests__operations-11.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"-a\")"
---
Program {
    body: [
        Expr {
            span: 0..2,
            expr: UnaryExpr(
                UnaryExpr {
                    span: 0..2,
                    op: Minus,
                    arg: Ident(
                        Ident {
                            span: 1..2,
                            name: "a",
                        },
                    ),
                },
            ),
        },
    ],
}
