crates/crochet_parser/src/snapshots/crochet_parser__tests__operations-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"x * y / z\")"
---
Program {
    body: [
        Expr {
            span: 0..9,
            expr: Op(
                Op {
                    span: 0..9,
                    op: Div,
                    left: Op(
                        Op {
                            span: 0..5,
                            op: Mul,
                            left: Ident(
                                Ident {
                                    span: 0..1,
                                    name: "x",
                                },
                            ),
                            right: Ident(
                                Ident {
                                    span: 4..5,
                                    name: "y",
                                },
                            ),
                        },
                    ),
                    right: Ident(
                        Ident {
                            span: 8..9,
                            name: "z",
                        },
                    ),
                },
            ),
        },
    ],
}
