crates/crochet_parser/src/snapshots/crochet_parser__tests__operations-5.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"a != b;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..7,
                expr: Expr {
                    span: 0..6,
                    kind: BinaryExpr(
                        BinaryExpr {
                            op: NotEq,
                            left: Expr {
                                span: 0..1,
                                kind: Ident(
                                    Ident {
                                        span: 0..1,
                                        name: "a",
                                    },
                                ),
                            },
                            right: Expr {
                                span: 5..6,
                                kind: Ident(
                                    Ident {
                                        span: 5..6,
                                        name: "b",
                                    },
                                ),
                            },
                        },
                    ),
                },
            },
        ],
    },
)
