crates/crochet_parser/src/snapshots/crochet_parser__tests__operations-6.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"a > b;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..6,
                expr: Expr {
                    span: 0..5,
                    kind: BinaryExpr(
                        BinaryExpr {
                            op: Gt,
                            left: Expr {
                                span: 0..1,
                                kind: Ident(
                                    Ident {
                                        span: 0..1,
                                        name: "a",
                                    },
                                ),
                                inferred_type: None,
                            },
                            right: Expr {
                                span: 4..5,
                                kind: Ident(
                                    Ident {
                                        span: 4..5,
                                        name: "b",
                                    },
                                ),
                                inferred_type: None,
                            },
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
