crates/crochet_parser/src/snapshots/crochet_parser__tests__operations-8.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"a < b;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..6,
                expr: BinaryExpr(
                    BinaryExpr {
                        span: 0..5,
                        op: Lt,
                        left: Ident(
                            Ident {
                                span: 0..1,
                                name: "a",
                            },
                        ),
                        right: Ident(
                            Ident {
                                span: 4..5,
                                name: "b",
                            },
                        ),
                    },
                ),
            },
        ],
    },
)
