crates/crochet_parser/src/snapshots/crochet_parser__tests__pattern_matching-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"\n            let bar = match (foo) {\n                {a: {b: {c}}} -> \"object\",\n                _ -> \"fallthrough\"\n            };              \n            \"#)"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 13..129,
                pattern: Pattern {
                    span: 17..20,
                    kind: Ident(
                        BindingIdent {
                            name: "bar",
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 23..128,
                        kind: Match(
                            Match {
                                expr: Expr {
                                    span: 30..33,
                                    kind: Ident(
                                        Ident {
                                            span: 30..33,
                                            name: "foo",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                arms: [
                                    Arm {
                                        span: 53..78,
                                        pattern: Pattern {
                                            span: 53..66,
                                            kind: Object(
                                                ObjectPat {
                                                    props: [
                                                        KeyValue(
                                                            KeyValuePatProp {
                                                                key: Ident {
                                                                    span: 54..55,
                                                                    name: "a",
                                                                },
                                                                value: Pattern {
                                                                    span: 57..65,
                                                                    kind: Object(
                                                                        ObjectPat {
                                                                            props: [
                                                                                KeyValue(
                                                                                    KeyValuePatProp {
                                                                                        key: Ident {
                                                                                            span: 58..59,
                                                                                            name: "b",
                                                                                        },
                                                                                        value: Pattern {
                                                                                            span: 61..64,
                                                                                            kind: Object(
                                                                                                ObjectPat {
                                                                                                    props: [
                                                                                                        Assign(
                                                                                                            AssignPatProp {
                                                                                                                span: 62..63,
                                                                                                                key: Ident {
                                                                                                                    span: 62..63,
                                                                                                                    name: "c",
                                                                                                                },
                                                                                                                value: None,
                                                                                                            },
                                                                                                        ),
                                                                                                    ],
                                                                                                    optional: false,
                                                                                                },
                                                                                            ),
                                                                                            inferred_type: None,
                                                                                        },
                                                                                    },
                                                                                ),
                                                                            ],
                                                                            optional: false,
                                                                        },
                                                                    ),
                                                                    inferred_type: None,
                                                                },
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        guard: None,
                                        body: Expr {
                                            span: 70..78,
                                            kind: Lit(
                                                Str(
                                                    Str {
                                                        span: 70..78,
                                                        value: "object",
                                                    },
                                                ),
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                    Arm {
                                        span: 96..114,
                                        pattern: Pattern {
                                            span: 96..97,
                                            kind: Wildcard(
                                                WildcardPat,
                                            ),
                                            inferred_type: None,
                                        },
                                        guard: None,
                                        body: Expr {
                                            span: 101..114,
                                            kind: Lit(
                                                Str(
                                                    Str {
                                                        span: 101..114,
                                                        value: "fallthrough",
                                                    },
                                                ),
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
